fix: Let theme list wrap

--- a/src/wyvrn/theme-selector.module.css
+++ b/src/wyvrn/theme-selector.module.css
@@ -2,6 +2,7 @@
   display: flex;
   gap: 16px;
   margin: 8px 0;
+  flex-wrap: wrap;
 }
 
 .themeOption {
